--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Retromo</string>
     <string name="action_settings">Settings</string>
+
+    <string name="launching_app_progress_bar_msg">アプリを起動しています…</string>
 </resources>
